# support-ticket-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  validate.py
server/: app.py  requirements.txt
support_ticket_env/: __init__.py  client.py  models.py
support_ticket_env/data/: __init__.py  tickets.py
support_ticket_env/graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
support_ticket_env/server/: app.py  environment.py
