[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ticket-env"
version = "1.0.0"
description = "OpenEnv Customer Support Ticket Management environment for AI agent RL training"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["support_ticket_env*"]
